clusters/constellation/apps/new-horizons/new-horizons-client/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-horizons-client-production
  namespace: new-horizons
  labels:
    app: new-horizons-client-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-horizons-client-production
  template:
    metadata:
      labels:
        app: new-horizons-client-production
    spec:
      containers:
        - name: new-horizons-client-production
          image: spuxx/new-horizons-client:0.0.0 # {"$imagepolicy": "new-horizons:new-horizons-client-production"}
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
