clusters/constellation/apps/new-horizons/new-horizons-client/production/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: new-horizons-client-production
  namespace: new-horizons
spec:
  selector:
    app: new-horizons-client-production
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
